--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,6 +1,27 @@
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.App {
+  text-align: center;
+}
+
 :root {
-    --bezier: cubic-bezier(0.21, 0.98, 0.6, 0.99);
-  }
+  --bezier: cubic-bezier(0.21, 0.98, 0.6, 0.99);
+}
 
 .center {
   position: absolute;
