Insert invoice table into the grid

--- a/frontend/components/dashboard/dashboard.module.scss
+++ b/frontend/components/dashboard/dashboard.module.scss
@@ -22,6 +22,7 @@
     "comp comp comp table table table";
   column-gap: 20px;
   row-gap: 20px;
+  grid-template-columns: repeat(6, minmax(1fr, 350px));
 }
 
 .stats {
