--- a/frontend/components/dashboard/dashboard.module.scss
+++ b/frontend/components/dashboard/dashboard.module.scss
@@ -23,6 +23,7 @@
   column-gap: 20px;
   row-gap: 20px;
   grid-template-columns: repeat(6, minmax(1fr, 350px));
+  grid-template-rows: repeat(4, 1fr);
 }
 
 .stats {
