--- a/frontend/src/components/dashboard/dashboard.module.scss
+++ b/frontend/src/components/dashboard/dashboard.module.scss
@@ -5,6 +5,7 @@ $go-back-height: 20px;
   height: calc(100vh - 38px);
   display: flex;
   flex-direction: column;
+  padding: 0 200px;
 }
 
 /* .menu {
